small refactoring for java 11 feature