@@ -3,12 +3,10 @@ package checks;
 import com.intellij.psi.PsiMethod;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 public class MethodsOfObjectCheck {
-    private final static Set<String> objectMethods = new HashSet<>(Arrays.asList(
+    private final static Set<String> objectMethods = Set.of(
             "getClass",
             "hashCode",
             "equals",
@@ -17,7 +15,7 @@ public class MethodsOfObjectCheck {
             "notify",
             "notifyAll",
             "wait",
-            "finalize"));
+            "finalize");
 
     public boolean checkMethods(@NotNull PsiMethod method) {
         return objectMethods.contains(method.getName());
